add: Filesystem class

--- a/Filemanager/Filemanager.vcxproj.filters
+++ b/Filemanager/Filemanager.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="commands.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="filesystem.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
