--- a/Filemanager/Filemanager.vcxproj
+++ b/Filemanager/Filemanager.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="commands.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="filesystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
