--- a/Filemanager/Filemanager.vcxproj
+++ b/Filemanager/Filemanager.vcxproj
@@ -145,7 +145,9 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="filelist.h" />
     <ClInclude Include="filesystem.h" />
+    <ClInclude Include="input.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
