add class fileinfo, new methods to path class, other changes

--- a/Filemanager/Filemanager.vcxproj
+++ b/Filemanager/Filemanager.vcxproj
@@ -140,13 +140,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="filesystemEx.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="fileinfo.h" />
     <ClInclude Include="filelist.h" />
     <ClInclude Include="filesystem.h" />
+    <ClInclude Include="filesystemEx.h" />
     <ClInclude Include="input.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
